Completed last method and fixed code
Completed the last extractMax method and fixed the heapify method